[package]
name = "puzzles"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = { version = "0.34", features = ["image", "mixer", "ttf", "gfx"] }
rand = "0.7"
derive_more = "0.99"
